# pypamguard

./: .gitignore  hatch-cmd-lines  index.html  pyproject.toml
.github/workflows/: build-release.yml
src/: cd.json
v0.0.2-alpha.10/: index.html  load_pamguard_binary_folder.html
v0.0.2-alpha.10/chunks/: index.html
v0.0.2-alpha.10/chunks/annotations/: annotationmanager.html  rwudp.html  tbdl.html
v0.0.2-alpha.10/chunks/standard/: stdchunkinfo.html
v0.0.2-alpha.10/core/: exceptions.html  filters.html  index.html  registry.html
v0.0.2-alpha.10/utils/: index.html
v0.0.2-alpha.5/: load_pamguard_multi_file.html  logger.html
v0.0.2-alpha.5/chunks/annotations/: beamformer.html  bearing.html  index.html  matchcls.html  userform.html
v0.0.2-alpha.5/chunks/base/: index.html
v0.0.2-alpha.5/chunks/generics/: genfileheader.html  genmodulefooter.html  genmoduleheader.html  index.html
v0.0.2-alpha.5/core/: readers.html
v0.0.2-alpha.5/utils/: bitmap.html  constants.html  serializer.html
v0.0.2-alpha.6/: index.html  load_pamguard_binary_file.html
v0.0.2-alpha.6/core/: pamguardfile.html  serializable.html
v1.0.0/: pypamguard.html  search.js
v1.0.0-alpha.1/: index.html
v1.0.0-alpha.2/: pypamguard.html  search.js
v1.0.0-alpha.2/pypamguard/: chunks.html  core.html  load_pamguard_binary_file.html  load_pamguard_binary_folder.html  load_pamguard_multi_file.html  main.html  utils.html
v1.0.0/pypamguard/: load_pamguard_binary_file.html  load_pamguard_binary_folder.html  load_pamguard_multi_file.html  logger.html  utils.html
(+155 files in other folders)
