[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypamguard"
version = "0.0.1"
authors = [
    { name="James Sullivan", email="sullivanj041@gmail.com" }
]
description = "A package for processing PAMGuard binary file outputs in Python."
readme = "README.md"
requires-python = ">3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = ["numpy"]

[tool.hatch.build]
sources = ["src"]
include = ["src/pypamguard/**"]

[tool.hatch.metadata]
# This will include your package automatically from `src/pypamguard`
allow-implicit-optional-dependencies = true
